[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/guis/Toolbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/guis/InGameMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scripts/Sandbox.gd" type="Script" id=3]
[ext_resource path="res://src/scenes/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scripts/TileGenerator.gd" type="Script" id=5]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[node name="Sandbox" type="Spatial" groups=[
"Persist",
]]
script = ExtResource( 3 )

[node name="Scene" type="Spatial" parent="."]

[node name="TileGenerator" type="Spatial" parent="Scene"]
script = ExtResource( 5 )

[node name="Robot1" type="Spatial" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CSGMesh" type="CSGMesh" parent="Scene/Robot1"]
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="CameraController" parent="." instance=ExtResource( 4 )]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" parent="GUI" instance=ExtResource( 1 )]

[node name="InGameMenu" parent="GUI" instance=ExtResource( 2 )]
visible = false
